# COT-for-32Bytes

./: CMakeLists.txt  README..md  README.md  compare.py  message.proto
cot_client/: package-lock.json  package.json
cot_client/src/: cot_client.ts  message.proto
include/: cot.hpp  message.pb.h
src/: cot.cpp  main.cpp  message.pb.c  random_stub.c
